@@ -12,12 +12,14 @@ import java.io.InputStream;
 import java.text.ParseException;
 import java.time.DayOfWeek;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 import static java.time.DayOfWeek.*;
+import static org.example.clock.ClockPanel.PANEL_ALARM;
 
 /**
  * The AlarmPanel is used to set and view alarms. The
@@ -42,8 +44,7 @@ public class AlarmPanel extends JPanel implements IClockPanel
     private static final Logger logger = LogManager.getLogger(AlarmPanel.class);
     private GridBagLayout layout;
     private GridBagConstraints constraints;
-    private JLabel alarmLabel1,alarmLabel2,
-            alarmLabel3,alarmLabel4;
+    private JLabel alarmLabel1,alarmLabel2, alarmLabel3,alarmLabel4;
     private JCheckBox mondayCheckBox,tuesdayCheckBox,wednesdayCheckBox,thursdayCheckBox,
                       fridayCheckBox,saturdayCheckBox,sundayCheckBox,weekCheckBox,weekendCheckBox;
     private JTextField textField1,textField2,textField3;
@@ -54,18 +55,23 @@ public class AlarmPanel extends JPanel implements IClockPanel
     private Alarm alarm, activeAlarm;
     private boolean updatingAlarm,alarmIsGoingOff;
     private AdvancedPlayer musicPlayer;
-    private ClockPanel clockPanel = ClockPanel.PANEL_ALARM;
 
-    AlarmPanel(Clock clock) {
+    /**
+     * Main constructor for creating the AlarmPanel
+     * @param clock the clock object reference
+     */
+    AlarmPanel(Clock clock)
+    {
         super();
-        setClock(clock);
+        this.clock = clock;
+        this.clock.setClockPanel(PANEL_ALARM);
         setMaximumSize(Clock.alarmSize);
-        setGridBagLayout(new GridBagLayout());
+        this.layout = new GridBagLayout();
         setLayout(layout);
-        setGridBagConstraints(new GridBagConstraints());
+        this.constraints = new GridBagConstraints();
         setBackground(Color.BLACK);
         setForeground(Color.BLACK);
-        setupAlarmPanel(getClock());
+        setupAlarmPanel(this.clock);
         setupAlarmButton();
         setupMusicPlayer();
         addComponentsToPanel();
@@ -73,63 +79,12 @@ public class AlarmPanel extends JPanel implements IClockPanel
         logger.info("Finished creating Alarm Panel");
     }
 
-    public GridBagLayout getGridBagLayout() { return this.layout; }
-    public GridBagConstraints getGridBagConstraints() { return this.constraints; }
-    public Clock getClock() { return this.clock; }
-    public Alarm getAlarm() { return this.alarm; }
-    public JLabel getJAlarmLbl1() { return this.alarmLabel1; } // H
-    public JLabel getJAlarmLbl2() { return this.alarmLabel2; } // M
-    public JLabel getJAlarmLbl3() { return this.alarmLabel3; } // T
-    public JLabel getJAlarmLbl4() { return this.alarmLabel4; } // All alarms
-    public JTextField getJTextField1() { return this.textField1; }
-    public JTextField getJTextField2() { return this.textField2; }
-    public JTextField getJTextField3() { return this.textField3; }
-    public JButton getSetAlarmButton() { return this.setAlarmButton; }
-    public JScrollPane getJScrollPane() { return this.scrollPane; }
-    public JTextArea getJTextArea() { return this.textArea; }
-    public boolean isUpdatingAlarm() { return updatingAlarm; }
-    public AdvancedPlayer getMusicPlayer() { return musicPlayer; }
-    public Alarm getActiveAlarm() { return this.activeAlarm; }
-    public JCheckBox getMondayCheckBox() { return mondayCheckBox; }
-    public JCheckBox getTuesdayCheckBox() { return tuesdayCheckBox; }
-    public JCheckBox getWednesdayCheckBox() { return wednesdayCheckBox; }
-    public JCheckBox getThursdayCheckBox() { return thursdayCheckBox; }
-    public JCheckBox getFridayCheckBox() { return fridayCheckBox; }
-    public JCheckBox getSaturdayCheckBox() { return saturdayCheckBox; }
-    public JCheckBox getSundayCheckBox() { return sundayCheckBox; }
-    public JCheckBox getWeekCheckBox() { return weekCheckBox; }
-    public JCheckBox getWeekendCheckBox() { return weekendCheckBox; }
-    public boolean isAlarmIsGoingOff() { return alarmIsGoingOff; }
-
-    void setGridBagLayout(GridBagLayout layout) { this.layout = layout; }
-    void setGridBagConstraints(GridBagConstraints constraints) { this.constraints = constraints; }
-    void setAlarm(Alarm alarm) { this.alarm = alarm; }
-    void setJAlarmLbl1(JLabel alarmLabel1) { this.alarmLabel1 = alarmLabel1; }
-    void setJAlarmLbl2(JLabel alarmLabel2) { this.alarmLabel2 = alarmLabel2; }
-    void setJAlarmLbl3(JLabel alarmLabel3) { this.alarmLabel3 = alarmLabel3; }
-    void setJAlarmLbl4(JLabel alarmLabel4) { this.alarmLabel4 = alarmLabel4; }
-    void setJTextField1(JTextField textField1) { this.textField1 = textField1; }
-    void setJTextField2(JTextField textField2) { this.textField2 = textField2; }
-    void setJTextField3(JTextField textField3) { this.textField3 = textField3; }
-    void setSetAlarmButton(JButton setAlarmButton) { this.setAlarmButton = setAlarmButton; }
-    void setJScrollPane(JScrollPane scrollPane) { this.scrollPane = scrollPane; }
-    void setJTextArea(final JTextArea textArea) { this.textArea = textArea; }
-    void setUpdatingAlarm(boolean updatingAlarm) { this.updatingAlarm = updatingAlarm; }
-    void setMusicPlayer(AdvancedPlayer musicPlayer) { this.musicPlayer = musicPlayer; }
-    void setActiveAlarm(Alarm activeAlarm) { this.activeAlarm = activeAlarm; }
-    void setMondayCheckBox(JCheckBox mondayCheckBox) { this.mondayCheckBox = mondayCheckBox; }
-    void setTuesdayCheckBox(JCheckBox tuesdayCheckBox) { this.tuesdayCheckBox = tuesdayCheckBox; }
-    void setWednesdayCheckBox(JCheckBox wednesdayCheckBox) { this.wednesdayCheckBox = wednesdayCheckBox; }
-    void setThursdayCheckBox(JCheckBox thursdayCheckBox) { this.thursdayCheckBox = thursdayCheckBox; }
-    void setFridayCheckBox(JCheckBox fridayCheckBox) { this.fridayCheckBox = fridayCheckBox; }
-    void setSaturdayCheckBox(JCheckBox saturdayCheckBox) { this.saturdayCheckBox = saturdayCheckBox; }
-    void setSundayCheckBox(JCheckBox sundayCheckBox) { this.sundayCheckBox = sundayCheckBox; }
-    void setWeekCheckBox(JCheckBox weekCheckBox) { this.weekCheckBox = weekCheckBox; }
-    void setWeekendCheckBox(JCheckBox weekendCheckBox) { this.weekendCheckBox = weekendCheckBox; }
-    void setAlarmIsGoingOff(boolean alarmIsGoingOff) { this.alarmIsGoingOff = alarmIsGoingOff; }
-    public void setClock(Clock clock) { this.clock = clock; }
-    // Helper methods
-    public void setupAlarmPanel(Clock clock) {
+    /**
+     * Adds all the components to the AlarmPanel
+     * @param clock the clock object reference
+     */
+    void setupAlarmPanel(Clock clock)
+    {
         logger.info("setupAlarmPanel");
         clock.setDateChanged(false);
         clock.setShowFullDate(false);
@@ -190,23 +145,28 @@ public class AlarmPanel extends JPanel implements IClockPanel
         setupCheckBoxes();
     }
 
-    public void setupMusicPlayer() {
+    /**
+     * Defines the music player object
+     */
+    void setupMusicPlayer()
+    {
         logger.info("setupMusicPlayer");
         InputStream inputStream = null;
-        try {
+        try
+        {
             inputStream = ClassLoader.getSystemResourceAsStream("sounds/alarmSound1.mp3");
-            if (null != inputStream) { setMusicPlayer(new AdvancedPlayer(inputStream)); }
-            logger.info("Music Player set");
+            if (null != inputStream) { musicPlayer = new AdvancedPlayer(inputStream); }
+            else throw new NullPointerException();
         }
-        catch (NullPointerException | JavaLayerException e) {
+        catch (NullPointerException | JavaLayerException e)
+        {
             logger.error("Music Player not set!");
-            if (null == inputStream)
-                printStackTrace(e, "An issue occurred while reading the alarm file.");
-            printStackTrace(e, "A JavaLayerException occurred: " + e.getMessage());
+            if (null == inputStream) printStackTrace(e, "An issue occurred while reading the alarm file.");
+            else printStackTrace(e, "A JavaLayerException occurred: " + e.getMessage());
         }
     }
 
-    protected void resetJAlarmLabel4() {
+    void resetJAlarmLabel4() {
         logger.info("resetJAlarmLabel4");
         if (getClock().getListOfAlarms().isEmpty()) { getJAlarmLbl4().setText(getClock().defaultText(6)); }// All Alarms label...
         else {
@@ -218,75 +178,103 @@ public class AlarmPanel extends JPanel implements IClockPanel
         }
     }
 
-    protected void printStackTrace(Exception e) { printStackTrace(e, ""); }
-
-    protected boolean validateFirstTextField() throws InvalidInputException {
+    /**
+     * Validates the first text field
+     * @return boolean true if the first text field is valid
+     * @throws InvalidInputException if the first text field is invalid
+     */
+    boolean validateFirstTextField() throws InvalidInputException
+    {
         logger.info("validateFirstTextField");
-        if (StringUtils.isBlank(getJTextField1().getText())) {
-            getJTextField1().grabFocus();
+        if (StringUtils.isBlank(textField1.getText())) {
+            textField1.grabFocus();
             throw new InvalidInputException("Hour cannot be blank");
         }
-        else if (Integer.parseInt(getJTextField1().getText()) <= 0 ||
-                 Integer.parseInt(getJTextField1().getText()) > 23 ) {
-            getJTextField1().grabFocus();
-            throw new InvalidInputException("Hour must be between 0 and 23");
+        else if (Integer.parseInt(textField1.getText()) <= 0 ||
+                 Integer.parseInt(textField1.getText()) > 23 )
+        {
+            textField1.grabFocus();
+            throw new InvalidInputException("Hours must be between 0 and 12");
         }
         return true;
     }
 
-    protected boolean validateSecondTextField() throws InvalidInputException {
-        logger.info("validateSecondTextField");
-        if (StringUtils.isBlank(getJTextField2().getText())) {
-            getJTextField2().grabFocus();
+    /**
+     * Validates the second text field
+     * @return boolean true if the second text field is valid
+     * @throws InvalidInputException if the second text field is invalid
+     */
+    boolean validateSecondTextField() throws InvalidInputException
+    {
+        logger.info("validate second text field");
+        if (textField2.getText().isBlank())
+        {
+            textField2.grabFocus();
             throw new InvalidInputException("Minutes cannot be blank");
         }
-        else if (Integer.parseInt(getJTextField2().getText()) < 0 ||
-                 Integer.parseInt(getJTextField2().getText()) > 59 ) {
-            getJTextField2().grabFocus();
+        else if (Integer.parseInt(textField2.getText()) < 0 ||
+                 Integer.parseInt(textField2.getText()) > 59 )
+        {
+            textField2.grabFocus();
             throw new InvalidInputException("Minutes must be between 0 and 59");
         }
         return true;
     }
 
-    protected boolean validateThirdTextField() throws InvalidInputException {
+    /**
+     * Validates the third text field
+     * @return boolean true if the third text field is valid
+     * @throws InvalidInputException if the third text field is invalid
+     */
+    boolean validateThirdTextField() throws InvalidInputException
+    {
         logger.info("validateThirdTextField");
-        if (StringUtils.isEmpty(getJTextField3().getText())) {
-            getJTextField3().grabFocus();
-            throw new InvalidInputException("Time cannot be blank");
+        if (textField3.getText().isBlank())
+        {
+            textField3.grabFocus();
+            throw new InvalidInputException("AMPM cannot be blank");
         }
-        else if ((!AM.equalsIgnoreCase(getJTextField3().getText()) || !PM.equalsIgnoreCase(getJTextField3().getText()))
-                 && getJTextField3().getText().length() != 2) {
-            getJTextField3().grabFocus();
-            throw new InvalidInputException("Time must be AM or PM");
+        else if ((!AM.equalsIgnoreCase(textField3.getText()) || !PM.equalsIgnoreCase(textField3.getText()))
+                 && textField3.getText().length() != 2)
+        {
+            textField3.grabFocus();
+            throw new InvalidInputException("AMPM must be 'AM' or 'PM'");
         }
-        else if (Integer.parseInt(getJTextField1().getText()) > 12 &&
-                 Integer.parseInt(getJTextField1().getText()) < 24 &&
-                 AM.equalsIgnoreCase(getJTextField3().getText())) {
-            getJTextField3().grabFocus();
-            throw new InvalidInputException("Hours can't be " + getJTextField1().getText() + " when Time is " + getJTextField3().getText());
+        else if (Integer.parseInt(textField1.getText()) > 12 &&
+                 Integer.parseInt(textField1.getText()) < 24 &&
+                 AM.equalsIgnoreCase(textField3.getText()))
+        {
+            textField3.grabFocus();
+            throw new InvalidInputException("Hours can't be " + textField1.getText() + " when Time is " + textField3.getText());
         }
-        else if (Integer.parseInt(getJTextField1().getText()) == 0 &&
-                 StringUtils.equalsIgnoreCase(getJTextField3().getText(), PM)) {
+        else if (Integer.parseInt(textField1.getText()) == 0 && PM.equalsIgnoreCase(textField3.getText()) )
+        {
             // basically setting militaryTime 00 hours, and saying PM
             // this makes no sense
-            getJTextField3().grabFocus();
-            throw new InvalidInputException("Hours can't be " + getJTextField1().getText() + " when Time is " + getJTextField3().getText());
+            textField3.grabFocus();
+            throw new InvalidInputException("Hours can't be " + textField1.getText() + " when Time is " + textField3.getText());
         }
         return true;
     }
 
-    protected boolean validateOnTheCheckBoxes() throws InvalidInputException {
+    /**
+     * Validates that at least one checkbox is selected
+     * @return boolean true if at least one checkbox is selected
+     * @throws InvalidInputException if no checkboxes are selected
+     */
+    boolean validateOnTheCheckBoxes() throws InvalidInputException
+    {
         logger.info("validateOnTheCheckBoxes");
-        ArrayList<DayOfWeek> days = checkWhichCheckBoxesWereChecked();
+        List<DayOfWeek> days = getDaysChecked();
         if (days.isEmpty()) { throw new InvalidInputException("At least one checkbox must be selected."); }
         return true;
     }
 
-    protected boolean validateACheckboxWasSelected() { return !checkWhichCheckBoxesWereChecked().isEmpty(); }
+    boolean validateACheckboxWasSelected() { return !getDaysChecked().isEmpty(); }
 
-    protected void addAlarmMenuItemFromAlarm(Alarm alarm) {
+    void addAlarmMenuItemFromAlarm(Alarm alarm) {
         logger.info("addAlarmMenuItemFromAlarm");
-        JMenuItem alarmItem = new JMenuItem(alarm.getAlarmAsString());
+        JMenuItem alarmItem = new JMenuItem(alarm.toString());
         alarmItem.setForeground(Color.WHITE);
         alarmItem.setBackground(Color.BLACK);
         logger.info("Size of viewAlarms before adding " + getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount());
@@ -294,81 +282,91 @@ public class AlarmPanel extends JPanel implements IClockPanel
         logger.info("Size of viewAlarms after adding " + getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount());
     }
 
-    protected void deleteAlarmMenuItemFromViewAlarms(Alarm alarm) {
-        logger.info("deleteAlarmMenuItemFromViewAlarms");
-        logger.info("Size of viewAlarms before removal " + getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount());
-        for(int i = 0; i < getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount(); i++)
+    /**
+     * Removes an alarm from the list in the menu
+     * @param alarm the alarm to remove
+     */
+    void deleteAlarmMenuItemFromViewAlarms(Alarm alarm)
+    {
+        logger.info("delete alarm menu item from view alarms");
+        logger.info("Size of viewAlarms before removal {}", clock.getClockMenuBar().getAlarmFeature_Menu().getItemCount());
+        for(int i=0; i<clock.getClockMenuBar().getAlarmFeature_Menu().getItemCount(); i++)
         {
-            if (getClock().getClockMenuBar().getAlarmFeature_Menu().getItem(i).getText().equals(alarm.getAlarmAsString()))
-            {
-                getClock().getClockMenuBar().getAlarmFeature_Menu().remove(getClock().getClockMenuBar().getAlarmFeature_Menu().getItem(i));
-            }
+            if (clock.getClockMenuBar().getAlarmFeature_Menu().getItem(i).getText().equals(alarm.toString()))
+            { clock.getClockMenuBar().getAlarmFeature_Menu().remove(getClock().getClockMenuBar().getAlarmFeature_Menu().getItem(i)); }
         }
-        logger.info("Size of viewAlarms after removal " + getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount());
+        logger.info("Size of viewAlarms after removal {}", clock.getClockMenuBar().getAlarmFeature_Menu().getItemCount());
     }
 
-    protected void resetJTextArea() {
-        logger.info("resetJTextArea");
-        getJTextArea().setText(EMPTY);
-        for(Alarm alarm : clock.getListOfAlarms()) {
-            if (!getJTextArea().getText().isEmpty())
-            { getJTextArea().append(NEWLINE); }
-            getJTextArea().append(alarm.getAlarmAsString()+NEWLINE);
-            alarm.getDaysShortened().forEach(day -> getJTextArea().append(day));
+    /**
+     * Resets the text area
+     */
+    void resetJTextArea()
+    {
+        logger.info("reset textarea");
+        textArea.setText(EMPTY);
+        for(Alarm alarm : clock.getListOfAlarms())
+        {
+            if (!textArea.getText().isEmpty())
+            { textArea.append(NEWLINE); }
+            textArea.append(alarm.toString()+NEWLINE);
+            alarm.getDaysShortened().forEach(day -> textArea.append(day));
         }
     }
 
-    protected void setupAlarmButton() {
-        logger.info("setupAlarmButton");
-        getSetAlarmButton().addActionListener(action -> {
-            //JCheckBox cbLog = (JCheckBox)(AbstractButton)action.getSource();
-            //logger.error("cbLog isSelected: " + cbLog.isSelected());
-            //logger.error("cbLog isEnabled: " + cbLog.isEnabled());
-            // check if h, m, and time are set. exit if not
+    /**
+     * Sets up the alarm button
+     */
+    void setupAlarmButton()
+    {
+        logger.info("setup alarm button");
+        setAlarmButton.addActionListener(action -> {
             logger.info("set alarm button clicked");
             Alarm alarm;
             boolean validated;
-            try {
+            try
+            {
                 validated = validateFirstTextField() && validateSecondTextField() // Hours and Minutes
                         && validateThirdTextField() && validateOnTheCheckBoxes(); // Time and Checkboxes
 
-                if (!validated) {
+                if (!validated)
+                {
                     logger.info("not valid inputs. not setting alarm");
-                    setAlarm(null); // new Alarm()
-                    //getClock().changeToAlarmPanel();
+                    this.alarm = null; // new Alarm()
                 }
-                else { // validated is true
-                    // Passed validation
-                    if (isUpdatingAlarm()) {
+                else
+                {
+                    if (updatingAlarm) {
                         logger.info("updating alarm");
+                        logger.info("clock.alarmsList size {}", clock.getListOfAlarms().size());
                         alarm = createAlarm();
                         alarm.setIsAlarmUpdating(false); // at this point, we are doing updating
-                        setAlarm(alarm);
+                        this.alarm = alarm;
                         // add clock to list of alarms
-                        if (getClock().getListOfAlarms().isEmpty()) {
+                        if (clock.getListOfAlarms().isEmpty())
+                        {
                             addAlarmMenuItemFromAlarm(alarm);
-                            getClock().getListOfAlarms().add(alarm);
+                            clock.getListOfAlarms().add(alarm);
                         }
-                        else {
+                        else
+                        {
                             boolean addToList = false;
-                            for(int i = 0; i < getClock().getListOfAlarms().size(); i++) {
-                                if (!getClock().getListOfAlarms().get(i).getAlarmAsString().equals(alarm.getAlarmAsString()) &&
-                                        getClock().getListOfAlarms().get(i).getDays() != alarm.getDays())
+                            for(int i=0; i<clock.getListOfAlarms().size(); i++) {
+                                if (!clock.getListOfAlarms().get(i).toString().equals(alarm.toString())
+                                    && clock.getListOfAlarms().get(i).getDays() != alarm.getDays())
                                 { addToList = true; }
                                 else
                                 { logger.error("Tried updating an alarm but it already exists! Cannot create duplicate alarm."); }
                             }
                             if (addToList) {
                                 addAlarmMenuItemFromAlarm(alarm);
-                                getClock().getListOfAlarms().add(alarm);
+                                clock.getListOfAlarms().add(alarm);
                             }
                         }
-                        logger.info("Size of listOfAlarms before adding " + (getClock().getListOfAlarms().size()-1));
-                        logger.info("Size of listOfAlarms after adding " + getClock().getListOfAlarms().size());
+                        logger.info("clock.alarmsList size {}", clock.getListOfAlarms().size());
                         // restart viewAlarms menu
-                        //resetViewAlarmsMenu(getClock().getListOfAlarms());
                         setupAlarmsInMenuFunctionality();
-                        setUpdatingAlarm(false);
+                        updatingAlarm = false;
                         resetJTextArea();
                         resetJCheckBoxes();
                         resetJAlarmLabel4();
@@ -379,14 +377,16 @@ public class AlarmPanel extends JPanel implements IClockPanel
                         alarm = createAlarm();
                         setAlarm(alarm);
                         setUpdatingAlarm(false);
-                        if (getClock().getListOfAlarms().isEmpty()) {
+                        if (getClock().getListOfAlarms().isEmpty())
+                        {
                             addAlarmMenuItemFromAlarm(alarm);
                             getClock().getListOfAlarms().add(alarm);
                         }
-                        else {
+                        else
+                        {
                             boolean addToList = false;
                             for(int i = 0; i < getClock().getListOfAlarms().size(); i++) {
-                                if (!getClock().getListOfAlarms().get(i).getAlarmAsString().equals(alarm.getAlarmAsString()) ||
+                                if (!getClock().getListOfAlarms().get(i).toString().equals(alarm.toString()) ||
                                         getClock().getListOfAlarms().get(i).getDays() != alarm.getDays())
                                 { addToList = true; }
                                 else
@@ -397,7 +397,7 @@ public class AlarmPanel extends JPanel implements IClockPanel
                                 getClock().getListOfAlarms().add(alarm);
                             }
                         }
-                        logger.info("Size of listOfAlarms after adding " + getClock().getListOfAlarms().size());
+                        logger.info("clock.alarmsList size {}", clock.getListOfAlarms().size());
                         // display list of alarms below All Alarms
                         resetJTextArea();
                         resetJCheckBoxes();
@@ -410,7 +410,8 @@ public class AlarmPanel extends JPanel implements IClockPanel
                     }
                 }
             }
-            catch (InvalidInputException | ParseException e) {
+            catch (InvalidInputException | ParseException e)
+            {
                 getJTextArea().setLineWrap(true);
                 getJTextArea().setWrapStyleWord(true);
                 getJTextArea().setText(e.getMessage());
@@ -426,7 +427,8 @@ public class AlarmPanel extends JPanel implements IClockPanel
      * @return Alarm
      * @throws ParseException will be thrown if hour, minutes, or time is inappropriate.
      */
-    public Alarm createAlarm() throws ParseException, InvalidInputException {
+    Alarm createAlarm() throws ParseException, InvalidInputException
+    {
         logger.info("createAlarm");
         int hour = Integer.parseInt(getJTextField1().getText());
         int minutes = Integer.parseInt(getJTextField2().getText());
@@ -437,16 +439,18 @@ public class AlarmPanel extends JPanel implements IClockPanel
         if (valid)
         {
             logger.info("valid alarm values...");
-            ArrayList<DayOfWeek> days = checkWhichCheckBoxesWereChecked();
+            List<DayOfWeek> days = getDaysChecked();
             Alarm alarm = new Alarm(hour, minutes, ampm, false, days, getClock());
             alarm.setIsAlarmGoingOff(false);
-            logger.info("Created an alarm: " + alarm.getAlarmAsString());
-            logger.info("days: ");
-            if (null != alarm.getDays())
+            StringBuilder daysStr = new StringBuilder();
+            daysStr.append("days: ");
+            for(DayOfWeek day: days)
             {
-                for(DayOfWeek day: days)
-                { logger.info(day+"\t"); }
+                daysStr.append(day);
+                daysStr.append("\t");
             }
+            logger.info("Created an alarm: {}", alarm);
+            logger.info("days: {}", daysStr);
             logger.info("Alarm created");
             return alarm;
         }
@@ -454,42 +458,54 @@ public class AlarmPanel extends JPanel implements IClockPanel
         { return null; }
     }
 
-    protected void updateTheAlarm(Alarm alarmToUpdate) {
-        logger.info("updateTheAlarm");
-        if (null != alarmToUpdate) {
-            logger.info("Updating an alarm: " + alarmToUpdate.getAlarmAsString() + alarmToUpdate.getDays());
-            if (alarmToUpdate.getHours() < 10 && alarmToUpdate.getHours() != 0) {
-                getJTextField1().setText("0" + alarmToUpdate.getHours());
-            } else if (alarmToUpdate.getHours() == 0 && alarmToUpdate.getMinutes() != 0) {
-                getJTextField1().setText("00");
-            } else {
-                getJTextField1().setText(alarmToUpdate.getHoursAsStr());
-            }
-            if (alarmToUpdate.getMinutes() < 10 && alarmToUpdate.getMinutes() != 0) {
-                getJTextField2().setText("0" + alarmToUpdate.getMinutes());
-            } else if (alarmToUpdate.getMinutes() == 0 && alarmToUpdate.getHours() != 0) {
-                getJTextField2().setText("00");
-            } else {
-                getJTextField2().setText(alarmToUpdate.getMinutesAsStr());
-            }
-            getJTextField3().setText(alarmToUpdate.getAMPM());
+    /**
+     * Updates an alarm
+     * @param alarmToUpdate the alarm to update
+     */
+    void updateTheAlarm(Alarm alarmToUpdate)
+    {
+        logger.info("updating alarm");
+        if (null != alarmToUpdate)
+        {
+            logger.info("Updating an alarm: {} days: {}", alarmToUpdate, alarmToUpdate.getDays());
+            // hours
+            if (alarmToUpdate.getHours() < 10 && alarmToUpdate.getHours() != 0)
+            { textField1.setText("0" + alarmToUpdate.getHours()); }
+            else if (alarmToUpdate.getHours() == 0 && alarmToUpdate.getMinutes() != 0)
+            { textField1.setText("00"); }
+            else
+            { textField1.setText(alarmToUpdate.getHoursAsStr()); }
+            // minutes
+            if (alarmToUpdate.getMinutes() < 10 && alarmToUpdate.getMinutes() != 0)
+            { textField2.setText("0" + alarmToUpdate.getMinutes()); }
+            else if (alarmToUpdate.getMinutes() == 0 && alarmToUpdate.getHours() != 0)
+            { textField2.setText("00"); }
+            else
+            { textField2.setText(alarmToUpdate.getMinutesAsStr()); }
+            textField3.setText(alarmToUpdate.getAMPM());
             setCheckBoxesIfWasSelected(alarmToUpdate);
         }
-        setUpdatingAlarm(true);
+        updatingAlarm = true;
         // remove alarm from list of alarms
         deleteAlarmMenuItemFromViewAlarms(alarmToUpdate);
-        logger.info("Size of listOfAlarms before removing " + getClock().getListOfAlarms().size());
-        getClock().getListOfAlarms().remove(alarmToUpdate);
-        logger.info("Size of listOfAlarms after removing " + getClock().getListOfAlarms().size());
+        logger.info("Size of listOfAlarms before removing {}", clock.getListOfAlarms().size());
+        clock.getListOfAlarms().remove(alarmToUpdate);
+        logger.info("Size of listOfAlarms after removing {}", clock.getListOfAlarms().size());
         resetJTextArea();
-        getJAlarmLbl4().setText("Updating alarm");
+        alarmLabel4.setText("Updating alarm");
     }
 
-    public void triggerAlarm(ExecutorService executor) {
+    /**
+     * Sets an alarm to go off
+     * @param executor
+     */
+    void triggerAlarm(ExecutorService executor)
+    {
         logger.info("triggerAlarm");
         setAlarmIsGoingOff(true);
-        getClock().getDigitalClockPanel().getLabel1().setText(getActiveAlarm().getAlarmAsString());
-        getClock().getDigitalClockPanel().getLabel2().setText("is going off!");
+        clock.getDigitalClockPanel().updateLabels();
+        //clock.getDigitalClockPanel().getLabel1().setText(activeAlarm.toString());
+        //clock.getDigitalClockPanel().getLabel2().setText("is going off!");
         // play sound
         Callable<String> c = () -> {
             try {
@@ -512,55 +528,59 @@ public class AlarmPanel extends JPanel implements IClockPanel
         executor.submit(c);
     }
 
-    public void stopAlarm() {
+    /**
+     * Stops an actively going off alarm
+     */
+    void stopAlarm()
+    {
         logger.info("stopAlarm");
-        setMusicPlayer(null);
-        setAlarmIsGoingOff(false);
-        logger.info("Stopping music.");
-        logger.info(getAlarm().getAlarmAsString()+" alarm turned off.");
+        musicPlayer = null;
+        alarmIsGoingOff = false;
+        logger.info(alarm.toString()+" alarm turned off.");
     }
 
-    public void checkIfAnyAlarmsAreGoingOff() {
-        logger.info("checkIfAnyAlarmsAreGoingOff");
+    void checkIfAnyAlarmsAreGoingOff()
+    {
+        logger.info("check if any alarms are going off");
         // alarm has reference to time
         // check all alarms
         // if any alarm matches clock's time, an alarm should be going off
         clock.getListOfAlarms().forEach((alarm) -> {
             for(DayOfWeek day : alarm.getDays()) {
-                if (alarm.getAlarmAsString().equals(clock.getAlarmTimeAsStr())
+                if (alarm.toString().equals(clock.getAlarmTimeAsStr())
                         &&
                         day == getClock().getDayOfWeek()) {
                     // time for alarm to be triggered
                     alarm.setIsAlarmGoingOff(true);
                     setActiveAlarm(alarm);
                     setAlarmIsGoingOff(true);
-                    logger.info("Alarm " + getActiveAlarm().getAlarmAsString() + " matches clock's time. ");
+                    logger.info("Alarm " + getActiveAlarm().toString() + " matches clock's time. ");
                     logger.info("Sounding alarm...");
                 }
                 else if (getClock().isShowMilitaryTime()) { // if in military time, change clocks hours back temporarily
                     if (getClock().getHours() > 12) {
                         int tempHour = getClock().getHours()-12;
                         String tempHourAsStr = (tempHour < 10) ? "0"+tempHour : String.valueOf(tempHour);
-                        if (alarm.getAlarmAsString().equals(tempHourAsStr+":"+getClock().getMinutesAsStr()+" "+getClock().getAMPM())
+                        if (alarm.toString().equals(tempHourAsStr+":"+getClock().getMinutesAsStr()+" "+getClock().getAMPM())
                                 &&
                                 day == getClock().getDayOfWeek()) {
                             // time for alarm to be triggered on
                             setActiveAlarm(alarm);
                             alarm.setIsAlarmGoingOff(true);
                             setAlarmIsGoingOff(true);
-                            logger.info("Alarm " + getActiveAlarm().getAlarmAsString() + " matches clock's time. ");
+                            logger.info("Alarm " + getActiveAlarm().toString() + " matches clock's time. ");
                             logger.info("Sounding alarm...");
                         }
                     }
                     else {
-                        if (alarm.getAlarmAsString().equals(getClock().getHoursAsStr()+":"+getClock().getMinutesAsStr()+" "+getClock().getAMPM())
+                        if (alarm.toString().equals(getClock().getHoursAsStr()+":"+getClock().getMinutesAsStr()+" "+getClock().getAMPM())
                                 &&
                                 day == getClock().getDayOfWeek()) {
                             // time for alarm to be triggered on
                             setActiveAlarm(alarm);
                             alarm.setIsAlarmGoingOff(true);
                             setAlarmIsGoingOff(true);
-                            logger.info("Alarm " + getActiveAlarm().getAlarmAsString() + " matches clock's time. ");
+                            logger.info("Alarm " + getActiveAlarm().toString() + " matches clock's time. ");
                             logger.info("Sounding alarm...");
                         }
                     }
@@ -576,7 +596,11 @@ public class AlarmPanel extends JPanel implements IClockPanel
         }
     }
 
-    public void setupAlarmsInMenuFunctionality() {
+    /**
+     * Adds alarms created to the menu
+     */
+    void setupAlarmsInMenuFunctionality()
+    {
         // get the view alarms menu
         // for each except the Set Alarms (option1)
         // create an action listener which
@@ -587,344 +611,403 @@ public class AlarmPanel extends JPanel implements IClockPanel
         // will delete the alarm
         // changing the values and clicking Set will save the alarm
         //05:06:00 PM
-        logger.info("setupAlarmsInMenuFunctionality");
-        for(int i=0; i<getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount(); i++) {
-            if (!"Set Alarms".equals(getClock().getClockMenuBar().getAlarmFeature_Menu().getItem(i).getText())) {
-                JMenuItem menuItem = getClock().getClockMenuBar().getAlarmFeature_Menu().getItem(i);
+        logger.info("setup alarms in menu functionality");
+        for(int i=0; i<getClock().getClockMenuBar().getAlarmFeature_Menu().getItemCount(); i++)
+        {
+            if (!"Set Alarms".equals(clock.getClockMenuBar().getAlarmFeature_Menu().getItem(i).getText()))
+            {
+                JMenuItem menuItem = clock.getClockMenuBar().getAlarmFeature_Menu().getItem(i);
                 menuItem.addActionListener(action -> {
-                    getClock().getListOfAlarms().forEach(alarm -> {
-                        if (alarm.getAlarmAsString().equals(menuItem.getText()))
-                        { setAlarm(alarm); }
+                    clock.getListOfAlarms().forEach(alarm -> {
+                        if (alarm.toString().equals(menuItem.getText()))
+                        { this.alarm = alarm; }
                     });
-                    if (getMusicPlayer() == null) { setupMusicPlayer(); }
+                    if (musicPlayer == null) { setupMusicPlayer(); }
                     // if an alarm is going off and we clicked on it in the menuBar
-                    if (getActiveAlarm() != null) {
-                        setAlarm(getActiveAlarm());
-                        if (getMusicPlayer() != null) { stopAlarm(); }
-                        else { logger.info("Music player is null!"); }
-                        setCheckBoxesIfWasSelected(getAlarm());
-                        getAlarm().setIsAlarmGoingOff(false);
-                        getAlarm().setIsAlarmUpdating(true); // this and the boolean below we want true
-                        setUpdatingAlarm(true); // we want to continue with the logic that's done in the next if
-                        setActiveAlarm(null);
-                        logger.info("Size of listOfAlarms before removing " + getClock().getListOfAlarms().size());
+                    if (activeAlarm != null) {
+                        alarm = activeAlarm;
+                        if (musicPlayer != null) { stopAlarm(); }
+                        else { logger.warn("Music player is null!"); }
+                        setCheckBoxesIfWasSelected(alarm);
+                        alarm.setIsAlarmGoingOff(false);
+                        alarm.setIsAlarmUpdating(true); // this and the boolean below we want true
+                        updatingAlarm = true; // we want to continue with the logic that's done in the next if
+                        activeAlarm = null;
+                        logger.info("Size of listOfAlarms before removing {}", clock.getListOfAlarms().size());
                         // remove alarm from list of alarms
-                        getClock().getListOfAlarms().remove(getAlarm());
-                        logger.info("Size of listOfAlarms after removing " + getClock().getListOfAlarms().size());
-                        deleteAlarmMenuItemFromViewAlarms(getAlarm());
+                        clock.getListOfAlarms().remove(getAlarm());
+                        logger.info("Size of listOfAlarms after removing {}", clock.getListOfAlarms().size());
+                        deleteAlarmMenuItemFromViewAlarms(alarm);
                         resetJTextArea();
-                        getClock().getAlarmPanel().getJTextField1().setText(getAlarm().getHoursAsStr());
-                        getClock().getAlarmPanel().getJTextField2().setText(getAlarm().getMinutesAsStr());
-                        getClock().getAlarmPanel().getJTextField3().setText(getAlarm().getAMPM());
-                        getJAlarmLbl4().setText("Alarm off.");
+                        clock.getAlarmPanel().getJTextField1().setText(getAlarm().getHoursAsStr());
+                        clock.getAlarmPanel().getJTextField2().setText(getAlarm().getMinutesAsStr());
+                        clock.getAlarmPanel().getJTextField3().setText(getAlarm().getAMPM());
+                        alarmLabel4.setText("Alarm off.");
                     }
                     // we are updating an alarm by clicking on it in the menuBar
-                    else if (getAlarm() != null) { // && getAlarm().isUpdatingAlarm())
-                        //updateTheAlarm(menuItem);
-                        updateTheAlarm(getAlarm());
-                        getJTextField1().setText(getAlarm().getHoursAsStr());
-                        getJTextField2().setText(getAlarm().getMinutesAsStr());
-                        getJTextField3().setText(getAlarm().getAMPM());
+                    else if (alarm != null) { // && getAlarm().isUpdatingAlarm())
+                        updateTheAlarm(alarm);
+                        textField1.setText(alarm.getHoursAsStr());
+                        textField2.setText(alarm.getMinutesAsStr());
+                        textField3.setText(alarm.getAMPM());
                     }
-                    getClock().changeToAlarmPanel(false);
+                    //clock.changeToAlarmPanel(false);
+                    clock.changePanels(PANEL_ALARM, false);
                 });
             }
         }
     }
 
-    protected ArrayList<DayOfWeek> checkWhichCheckBoxesWereChecked() {
-        logger.info("checkWhichCheckBoxesWereChecked");
-        ArrayList<DayOfWeek> daysSelected = new ArrayList<>();
-        if (getMondayCheckBox().isSelected()) { daysSelected.add(MONDAY); }
-        if (getTuesdayCheckBox().isSelected()) { daysSelected.add(TUESDAY); }
-        if (getWednesdayCheckBox().isSelected()) { daysSelected.add(WEDNESDAY); }
-        if (getThursdayCheckBox().isSelected()) { daysSelected.add(THURSDAY); }
-        if (getFridayCheckBox().isSelected()) { daysSelected.add(FRIDAY); }
-        if (getSaturdayCheckBox().isSelected()) { daysSelected.add(SATURDAY); }
-        if (getSundayCheckBox().isSelected()) { daysSelected.add(SUNDAY); }
-        if (getWeekCheckBox().isSelected()) {
+    /**
+     * Returns a list of days that were checked
+     * @return List<DayOfWeek> the days selected
+     */
+    List<DayOfWeek> getDaysChecked()
+    {
+        logger.info("check which checkBoxes were checked");
+        List<DayOfWeek> daysSelected = new ArrayList<>();
+        if (mondayCheckBox.isSelected()) { daysSelected.add(MONDAY); }
+        if (tuesdayCheckBox.isSelected()) { daysSelected.add(TUESDAY); }
+        if (wednesdayCheckBox.isSelected()) { daysSelected.add(WEDNESDAY); }
+        if (thursdayCheckBox.isSelected()) { daysSelected.add(THURSDAY); }
+        if (fridayCheckBox.isSelected()) { daysSelected.add(FRIDAY); }
+        if (saturdayCheckBox.isSelected()) { daysSelected.add(SATURDAY); }
+        if (sundayCheckBox.isSelected()) { daysSelected.add(SUNDAY); }
+        if (weekCheckBox.isSelected()) {
             if (!daysSelected.contains(MONDAY)) daysSelected.add(MONDAY);
             if (!daysSelected.contains(TUESDAY)) daysSelected.add(TUESDAY);
             if (!daysSelected.contains(WEDNESDAY)) daysSelected.add(WEDNESDAY);
             if (!daysSelected.contains(THURSDAY)) daysSelected.add(THURSDAY);
             if (!daysSelected.contains(FRIDAY)) daysSelected.add(FRIDAY);
         } // add Monday - Friday
-        if (getWeekendCheckBox().isSelected()) {
+        if (weekendCheckBox.isSelected()) {
             if (!daysSelected.contains(SATURDAY)) daysSelected.add(SATURDAY);
             if (!daysSelected.contains(SUNDAY)) daysSelected.add(SUNDAY);
         } // add Saturday and Sunday
         return daysSelected;
     }
 
-    protected void resetJCheckBoxes() {
+    /**
+     * Rests all the checkboxes to false
+     */
+    void resetJCheckBoxes() 
+    {
         logger.info("resetJCheckBoxes");
-        if (getSundayCheckBox().isSelected()) { getSundayCheckBox().setSelected(false); }
-        if (getMondayCheckBox().isSelected()) { getMondayCheckBox().setSelected(false); }
-        if (getTuesdayCheckBox().isSelected()) { getTuesdayCheckBox().setSelected(false); }
-        if (getWednesdayCheckBox().isSelected()) { getWednesdayCheckBox().setSelected(false); }
-        if (getThursdayCheckBox().isSelected()) { getThursdayCheckBox().setSelected(false); }
-        if (getFridayCheckBox().isSelected()) { getFridayCheckBox().setSelected(false); }
-        if (getSaturdayCheckBox().isSelected()) { getSaturdayCheckBox().setSelected(false); }
-        if (getWeekCheckBox().isSelected()) { getWeekCheckBox().setSelected(false); }
-        if (getWeekendCheckBox().isSelected()) { getWeekendCheckBox().setSelected(false); }
+        if (sundayCheckBox.isSelected()) { sundayCheckBox.setSelected(false); }
+        if (mondayCheckBox.isSelected()) { mondayCheckBox.setSelected(false); }
+        if (tuesdayCheckBox.isSelected()) { tuesdayCheckBox.setSelected(false); }
+        if (wednesdayCheckBox.isSelected()) { wednesdayCheckBox.setSelected(false); }
+        if (thursdayCheckBox.isSelected()) { thursdayCheckBox.setSelected(false); }
+        if (fridayCheckBox.isSelected()) { fridayCheckBox.setSelected(false); }
+        if (saturdayCheckBox.isSelected()) { saturdayCheckBox.setSelected(false); }
+        if (weekCheckBox.isSelected()) { weekCheckBox.setSelected(false); }
+        if (weekendCheckBox.isSelected()) { weekendCheckBox.setSelected(false); }
     }
 
-    public void setCheckBoxesIfWasSelected(Alarm alarmToUpdate) {
+    /**
+     * Sets the checkboxes if the alarm was selected
+     * because it is going to be updated
+     * @param alarmToUpdate the alarm to update
+     */
+    void setCheckBoxesIfWasSelected(Alarm alarmToUpdate)
+    {
         logger.info("setCheckBoxesIfWasSelected");
-        if (alarmToUpdate.getDays().contains(MONDAY)) { getMondayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(TUESDAY)) { getTuesdayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(WEDNESDAY)) { getWednesdayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(THURSDAY)) { getThursdayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(FRIDAY)) { getFridayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(SATURDAY)) { getSaturdayCheckBox().setSelected(true); }
-        if (alarmToUpdate.getDays().contains(SUNDAY)) { getSundayCheckBox().setSelected(true); }
+        if (alarmToUpdate.getDays().contains(MONDAY)) { mondayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(TUESDAY)) { tuesdayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(WEDNESDAY)) { wednesdayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(THURSDAY)) { thursdayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(FRIDAY)) { fridayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(SATURDAY)) { saturdayCheckBox.setSelected(true); }
+        if (alarmToUpdate.getDays().contains(SUNDAY)) { sundayCheckBox.setSelected(true); }
         if (alarmToUpdate.getDays().contains(MONDAY) &&
                 alarmToUpdate.getDays().contains(TUESDAY) &&
                 alarmToUpdate.getDays().contains(WEDNESDAY) &&
                 alarmToUpdate.getDays().contains(THURSDAY) &&
                 alarmToUpdate.getDays().contains(FRIDAY)) {
-            getMondayCheckBox().setSelected(true);
-            getTuesdayCheckBox().setSelected(true);
-            getWednesdayCheckBox().setSelected(true);
-            getThursdayCheckBox().setSelected(true);
-            getFridayCheckBox().setSelected(true);
-            getWeekCheckBox().setSelected(true);
+            mondayCheckBox.setSelected(true);
+            tuesdayCheckBox.setSelected(true);
+            wednesdayCheckBox.setSelected(true);
+            thursdayCheckBox.setSelected(true);
+            fridayCheckBox.setSelected(true);
+            weekCheckBox.setSelected(true);
         }
         if (alarmToUpdate.getDays().contains(SATURDAY) &&
                 alarmToUpdate.getDays().contains(SUNDAY)) {
-            getSaturdayCheckBox().setSelected(true);
-            getSundayCheckBox().setSelected(true);
-            getWeekendCheckBox().setSelected(true);
+            saturdayCheckBox.setSelected(true);
+            sundayCheckBox.setSelected(true);
+            weekendCheckBox.setSelected(true);
         }
     }
 
-    protected void setupCheckBoxes() {
+    /**
+     * Sets up the checkboxes for the Alarm Panel
+     */
+    void setupCheckBoxes()
+    {
         logger.info("setupCheckBoxes");
         setSundayCheckBox(new JCheckBox(SUNDAY.toString().substring(0,2), false));
-        getSundayCheckBox().setFont(Clock.font20);
-        getSundayCheckBox().setBackground(Color.BLACK);
-        getSundayCheckBox().setForeground(Color.WHITE);
-        getSundayCheckBox().addActionListener(action -> {
-            if (!getSundayCheckBox().isSelected())
-            {
-                logger.info("Sunday checkbox not selected!");
-                getSundayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Sunday checkbox selected!");
-                getSundayCheckBox().setSelected(true);
-            }
+        sundayCheckBox.setFont(Clock.font20);
+        sundayCheckBox.setBackground(Color.BLACK);
+        sundayCheckBox.setForeground(Color.WHITE);
+        sundayCheckBox.addActionListener(action -> {
+            sundayCheckBox.setSelected(sundayCheckBox.isSelected());
+            logger.info("sundayCheckBox: {}", sundayCheckBox.isSelected());
         });
 
         setMondayCheckBox(new JCheckBox(MONDAY.toString().substring(0,1), false));
-        getMondayCheckBox().setFont(Clock.font20);
-        getMondayCheckBox().setBackground(Color.BLACK);
-        getMondayCheckBox().setForeground(Color.WHITE);
-        getMondayCheckBox().addActionListener(action -> {
-            if (!getMondayCheckBox().isSelected())
-            {
-                logger.info("Monday checkbox not selected!");
-                getMondayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Monday checkbox selected!");
-                getMondayCheckBox().setSelected(true);
-            }
+        mondayCheckBox.setFont(Clock.font20);
+        mondayCheckBox.setBackground(Color.BLACK);
+        mondayCheckBox.setForeground(Color.WHITE);
+        mondayCheckBox.addActionListener(action -> {
+            mondayCheckBox.setSelected(mondayCheckBox.isSelected());
+            logger.info("mondayCheckBox: {}", mondayCheckBox.isSelected());
         });
 
         setTuesdayCheckBox(new JCheckBox(TUESDAY.toString().substring(0,1), false));
-        getTuesdayCheckBox().setFont(Clock.font20);
-        getTuesdayCheckBox().setBackground(Color.BLACK);
-        getTuesdayCheckBox().setForeground(Color.WHITE);
-        getTuesdayCheckBox().addActionListener(action -> {
-            if (!getTuesdayCheckBox().isSelected())
-            {
-                logger.info("Tuesday checkbox not selected!");
-                getTuesdayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Tuesday checkbox selected!");
-                getTuesdayCheckBox().setSelected(true);
-            }
+        tuesdayCheckBox.setFont(Clock.font20);
+        tuesdayCheckBox.setBackground(Color.BLACK);
+        tuesdayCheckBox.setForeground(Color.WHITE);
+        tuesdayCheckBox.addActionListener(action -> {
+            tuesdayCheckBox.setSelected(tuesdayCheckBox.isSelected());
+            logger.info("tuesdayCheckBox: {}", tuesdayCheckBox.isSelected());
         });
 
         setWednesdayCheckBox(new JCheckBox(WEDNESDAY.toString().substring(0,1), false));
-        getWednesdayCheckBox().setFont(Clock.font20);
-        getWednesdayCheckBox().setBackground(Color.BLACK);
-        getWednesdayCheckBox().setForeground(Color.WHITE);
-        getWednesdayCheckBox().addActionListener(action -> {
-            if (!getWednesdayCheckBox().isSelected())
-            {
-                logger.info("Wednesday checkbox not selected!");
-                getWednesdayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Wednesday checkbox selected!");
-                getWednesdayCheckBox().setSelected(true);
-            }
+        wednesdayCheckBox.setFont(Clock.font20);
+        wednesdayCheckBox.setBackground(Color.BLACK);
+        wednesdayCheckBox.setForeground(Color.WHITE);
+        wednesdayCheckBox.addActionListener(action -> {
+            wednesdayCheckBox.setSelected(wednesdayCheckBox.isSelected());
+            logger.info("wednesdayCheckBox: {}", wednesdayCheckBox.isSelected());
         });
 
         setThursdayCheckBox(new JCheckBox(THURSDAY.toString().substring(0,1)+THURSDAY.toString().substring(1,2).toLowerCase(Locale.ROOT), false));
-        getThursdayCheckBox().setFont(Clock.font20);
-        getThursdayCheckBox().setBackground(Color.BLACK);
-        getThursdayCheckBox().setForeground(Color.WHITE);
-        getThursdayCheckBox().addActionListener(action -> {
-            if (!getThursdayCheckBox().isSelected())
-            {
-                logger.info("Thursday checkbox not selected!");
-                getThursdayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Thursday checkbox selected!");
-                getThursdayCheckBox().setSelected(true);
-            }
+        thursdayCheckBox.setFont(Clock.font20);
+        thursdayCheckBox.setBackground(Color.BLACK);
+        thursdayCheckBox.setForeground(Color.WHITE);
+        thursdayCheckBox.addActionListener(action -> {
+            thursdayCheckBox.setSelected(thursdayCheckBox.isSelected());
+            logger.info("thursdayCheckBox: {}", thursdayCheckBox.isSelected());
         });
 
         setFridayCheckBox(new JCheckBox(FRIDAY.toString().substring(0,1), false));
-        getFridayCheckBox().setFont(Clock.font20);
-        getFridayCheckBox().setBackground(Color.BLACK);
-        getFridayCheckBox().setForeground(Color.WHITE);
-        getFridayCheckBox().addActionListener(action -> {
-            if (!getFridayCheckBox().isSelected())
-            {
-                logger.info("Friday checkbox not selected!");
-                getFridayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Friday checkbox selected!");
-                getFridayCheckBox().setSelected(true);
-            }
+        fridayCheckBox.setFont(Clock.font20);
+        fridayCheckBox.setBackground(Color.BLACK);
+        fridayCheckBox.setForeground(Color.WHITE);
+        fridayCheckBox.addActionListener(action -> {
+            fridayCheckBox.setSelected(fridayCheckBox.isSelected());
+            logger.info("fridayCheckBox: {}", fridayCheckBox.isSelected());
         });
 
         setSaturdayCheckBox(new JCheckBox(SATURDAY.toString().substring(0,1), false));
-        getSaturdayCheckBox().setFont(Clock.font20);
-        getSaturdayCheckBox().setBackground(Color.BLACK);
-        getSaturdayCheckBox().setForeground(Color.WHITE);
-        getSaturdayCheckBox().addActionListener(action -> {
-            if (!getSaturdayCheckBox().isSelected())
-            {
-                logger.info("Saturday checkbox not selected!");
-                getSaturdayCheckBox().setSelected(false);
-            }
-            else
-            {
-                logger.info("Saturday checkbox selected!");
-                getSaturdayCheckBox().setSelected(true);
-            }
+        saturdayCheckBox.setFont(Clock.font20);
+        saturdayCheckBox.setBackground(Color.BLACK);
+        saturdayCheckBox.setForeground(Color.WHITE);
+        saturdayCheckBox.addActionListener(action -> {
+            saturdayCheckBox.setSelected(saturdayCheckBox.isSelected());
+            logger.info("saturdayCheckBox: {}", saturdayCheckBox.isSelected());
         });
         // setup WEEK
         setWeekCheckBox(new JCheckBox("WK", false));
-        getWeekCheckBox().setFont(Clock.font20);
-        getWeekCheckBox().setBackground(Color.BLACK);
-        getWeekCheckBox().setForeground(Color.WHITE);
-        getWeekCheckBox().addActionListener(action -> {
-            if (!getWeekCheckBox().isSelected())
+        weekCheckBox.setFont(Clock.font20);
+        weekCheckBox.setBackground(Color.BLACK);
+        weekCheckBox.setForeground(Color.WHITE);
+        weekCheckBox.addActionListener(action -> {
+            if (!weekCheckBox.isSelected())
             {
                 logger.info("Week checkbox not selected!");
-                getWeekCheckBox().setSelected(false);
-                getMondayCheckBox().setSelected(false);
-                getTuesdayCheckBox().setSelected(false);
-                getWednesdayCheckBox().setSelected(false);
-                getThursdayCheckBox().setSelected(false);
-                getFridayCheckBox().setSelected(false);
+                weekCheckBox.setSelected(false);
+                mondayCheckBox.setSelected(false);
+                tuesdayCheckBox.setSelected(false);
+                wednesdayCheckBox.setSelected(false);
+                thursdayCheckBox.setSelected(false);
+                fridayCheckBox.setSelected(false);
             }
             else
             {
                 logger.info("Week checkbox selected!");
-                getWeekCheckBox().setSelected(true);
-                getMondayCheckBox().setSelected(true);
-                getTuesdayCheckBox().setSelected(true);
-                getWednesdayCheckBox().setSelected(true);
-                getThursdayCheckBox().setSelected(true);
-                getFridayCheckBox().setSelected(true);
+                weekCheckBox.setSelected(true);
+                mondayCheckBox.setSelected(true);
+                tuesdayCheckBox.setSelected(true);
+                wednesdayCheckBox.setSelected(true);
+                thursdayCheckBox.setSelected(true);
+                fridayCheckBox.setSelected(true);
             }
         });
         // setup WEEKEND
         setWeekendCheckBox(new JCheckBox("WKD", false));
-        getWeekendCheckBox().setFont(Clock.font20);
-        getWeekendCheckBox().setBackground(Color.BLACK);
-        getWeekendCheckBox().setForeground(Color.WHITE);
-        getWeekendCheckBox().addActionListener(action -> {
-            if (!getWeekendCheckBox().isSelected())
+        weekendCheckBox.setFont(Clock.font20);
+        weekendCheckBox.setBackground(Color.BLACK);
+        weekendCheckBox.setForeground(Color.WHITE);
+        weekendCheckBox.addActionListener(action -> {
+            if (!weekendCheckBox.isSelected())
             {
                 logger.info("Weekend checkbox not selected!");
-                getWeekendCheckBox().setSelected(false);
-                getSaturdayCheckBox().setSelected(false);
-                getSundayCheckBox().setSelected(false);
+                weekendCheckBox.setSelected(false);
+                saturdayCheckBox.setSelected(false);
+                sundayCheckBox.setSelected(false);
             }
             else
             {
                 logger.info("Weekend checkbox selected!");
-                getWeekendCheckBox().setSelected(true);
-                getSaturdayCheckBox().setSelected(true);
-                getSundayCheckBox().setSelected(true);
+                weekendCheckBox.setSelected(true);
+                saturdayCheckBox.setSelected(true);
+                sundayCheckBox.setSelected(true);
             }
         });
     }
 
-    public void printStackTrace(Exception e, String message) {
+    /**
+     * This method prints the stack trace of an exception
+     * that may occur when the digital panel is in use.
+     * @param e the exception
+     * @param message the message to print
+     */
+    public void printStackTrace(Exception e, String message)
+    {
         if (null != message)
             logger.error(message);
         else
             logger.error(e.getMessage());
-        for(StackTraceElement ste : e.getStackTrace()) {
-            logger.error(ste.toString());
-        }
+        for(StackTraceElement ste : e.getStackTrace())
+        { logger.error(ste.toString()); }
     }
 
-    @Override
-    public void addComponentsToPanel() {
+    /**
+     * This method prints the stack trace of an exception
+     * that may occur when the digital panel is in use.
+     * @param e the exception
+     */
+    void printStackTrace(Exception e)
+    { printStackTrace(e, ""); }
+
+    /**
+     * This method adds the components to the alarm panel
+     */
+    public void addComponentsToPanel()
+    {
         logger.info("addComponentsToPanel");
-        addComponent(getJAlarmLbl1(),0,0,1,1,0,0,   GridBagConstraints.BOTH, new Insets(0,0,0,0)); // H
-        addComponent(getJTextField1(),0,1,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
-        addComponent(getJAlarmLbl2(),0,2,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // M
-        addComponent(getJTextField2(),0,3,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
-        addComponent(getJAlarmLbl3(),0,4,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // Time (AM/PM)
-        addComponent(getJTextField3(),0,5,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
-        addComponent(getJAlarmLbl4(), 0, 6, 2, 1, 2, 2, GridBagConstraints.BOTH, new Insets(0,0,0,0));
-        getGridBagConstraints().weighty = 4;
-        getGridBagConstraints().weightx = 2;
-        addComponent(getJScrollPane(),1,6,2,4, 0,0, GridBagConstraints.BOTH, new Insets(1,1,1,1)); // textArea
-        getGridBagConstraints().weighty = 1;
-        getGridBagConstraints().weightx = 1;
+        addComponent(alarmLabel1,0,0,1,1,0,0,   GridBagConstraints.BOTH, new Insets(0,0,0,0)); // H
+        addComponent(textField1,0,1,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
+        addComponent(alarmLabel2,0,2,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // M
+        addComponent(textField2,0,3,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
+        addComponent(alarmLabel3,0,4,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // Time (AM/PM)
+        addComponent(textField3,0,5,1,1, 0,0, GridBagConstraints.BOTH, new Insets(0,0,0,0)); // textField
+        addComponent(alarmLabel4, 0, 6, 2, 1, 2, 2, GridBagConstraints.BOTH, new Insets(0,0,0,0));
+        constraints.weighty = 4;
+        constraints.weightx = 2;
+        addComponent(scrollPane,1,6,2,4, 0,0, GridBagConstraints.BOTH, new Insets(1,1,1,1)); // textArea
+        constraints.weighty = 1;
+        constraints.weightx = 1;
         // new column, first row
-        addComponent(getMondayCheckBox(), 1,0,2,1, 0,0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Monday
-        addComponent(getTuesdayCheckBox(), 2, 0, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Tuesday
-        addComponent(getWednesdayCheckBox(), 3, 0, 2, 1, 2, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Wednesday
+        addComponent(mondayCheckBox, 1,0,2,1, 0,0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Monday
+        addComponent(tuesdayCheckBox, 2, 0, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Tuesday
+        addComponent(wednesdayCheckBox, 3, 0, 2, 1, 2, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Wednesday
         // new column, second row
-        addComponent(getThursdayCheckBox(), 1, 2, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Thursday
-        addComponent(getFridayCheckBox(), 2, 2, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Friday
-        addComponent(getSaturdayCheckBox(), 3, 2, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Saturday
+        addComponent(thursdayCheckBox, 1, 2, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Thursday
+        addComponent(fridayCheckBox, 2, 2, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Friday
+        addComponent(saturdayCheckBox, 3, 2, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Saturday
         // new column, third row
-        addComponent(getSundayCheckBox(), 1, 4, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Sunday
-        addComponent(getWeekCheckBox(), 2, 4, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Weekend
-        addComponent(getWeekendCheckBox(), 3, 4, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Weekend
-        // set button
-        addComponent(getSetAlarmButton(), 4, 2, 2, 1, 1, 1, GridBagConstraints.CENTER, new Insets(0,0,0,0)); // Set button
+        addComponent(sundayCheckBox, 1, 4, 2, 1, 0, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Sunday
+        addComponent(weekCheckBox, 2, 4, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Weekend
+        addComponent(weekendCheckBox, 3, 4, 2, 1, 1, 0, GridBagConstraints.NONE, new Insets(0,0,0,0)); // Sqr Weekend
+        // set-alarm button
+        addComponent(setAlarmButton, 4, 2, 2, 1, 1, 1, GridBagConstraints.CENTER, new Insets(0,0,0,0)); // Set button
         // header and alarms
     }
-    public void addComponent(Component cpt, int gridy, int gridx, double gwidth, double gheight, int ipadx, int ipady, int fill, Insets insets) {
-        //logger.info("addComponent");
-        getGridBagConstraints().gridx = gridx;
-        getGridBagConstraints().gridy = gridy;
-        getGridBagConstraints().gridwidth = (int)Math.ceil(gwidth);
-        getGridBagConstraints().gridheight = (int)Math.ceil(gheight);
-        getGridBagConstraints().fill = fill;
-        getGridBagConstraints().ipadx = ipadx;
-        getGridBagConstraints().ipady = ipady;
-        getGridBagConstraints().insets = insets;
-        getGridBagLayout().setConstraints(cpt, getGridBagConstraints());
+
+    /**
+     * The main method used for adding components
+     * to the alarm panel
+     * @param cpt       the component to add
+     * @param gridy     the y position
+     * @param gridx     the x position
+     * @param gwidth    the width
+     * @param gheight   the height
+     * @param ipadx     the x padding
+     * @param ipady     the y padding
+     * @param fill      the fill
+     * @param insets    the insets
+     */
+    void addComponent(Component cpt, int gridy, int gridx, double gwidth, double gheight, int ipadx, int ipady, int fill, Insets insets)
+    {
+        constraints.gridx = gridx;
+        constraints.gridy = gridy;
+        constraints.gridwidth = (int)Math.ceil(gwidth);
+        constraints.gridheight = (int)Math.ceil(gheight);
+        constraints.fill = fill;
+        constraints.ipadx = ipadx;
+        constraints.ipady = ipady;
+        constraints.insets = insets;
+        layout.setConstraints(cpt,constraints);
         add(cpt);
     }
 
-    public void setupSettingsMenu() {
+    /**
+     * This method sets up the settings menu for the
+     * alarm panel.
+     */
+    public void setupSettingsMenu()
+    {
         clock.clearSettingsMenu();
         logger.info("No settings set up for Alarm Panel");
     }
+
+    /* Getters */
+    GridBagLayout getGridBagLayout() { return this.layout; }
+    GridBagConstraints getGridBagConstraints() { return this.constraints; }
+    Clock getClock() { return this.clock; }
+    Alarm getAlarm() { return this.alarm; }
+    JLabel getJAlarmLbl1() { return this.alarmLabel1; } // H
+    JLabel getJAlarmLbl2() { return this.alarmLabel2; } // M
+    JLabel getJAlarmLbl3() { return this.alarmLabel3; } // T
+    JLabel getJAlarmLbl4() { return this.alarmLabel4; } // All alarms
+    JTextField getJTextField1() { return this.textField1; }
+    JTextField getJTextField2() { return this.textField2; }
+    JTextField getJTextField3() { return this.textField3; }
+    JButton getSetAlarmButton() { return this.setAlarmButton; }
+    JScrollPane getJScrollPane() { return this.scrollPane; }
+    JTextArea getJTextArea() { return this.textArea; }
+    boolean isUpdatingAlarm() { return updatingAlarm; }
+    AdvancedPlayer getMusicPlayer() { return musicPlayer; }
+    Alarm getActiveAlarm() { return this.activeAlarm; }
+    JCheckBox getMondayCheckBox() { return mondayCheckBox; }
+    JCheckBox getTuesdayCheckBox() { return tuesdayCheckBox; }
+    JCheckBox getWednesdayCheckBox() { return wednesdayCheckBox; }
+    JCheckBox getThursdayCheckBox() { return thursdayCheckBox; }
+    JCheckBox getFridayCheckBox() { return fridayCheckBox; }
+    JCheckBox getSaturdayCheckBox() { return saturdayCheckBox; }
+    JCheckBox getSundayCheckBox() { return sundayCheckBox; }
+    JCheckBox getWeekCheckBox() { return weekCheckBox; }
+    JCheckBox getWeekendCheckBox() { return weekendCheckBox; }
+    boolean isAlarmIsGoingOff() { return alarmIsGoingOff; }
+
+    /* Setters */
+    protected void setGridBagLayout(GridBagLayout layout) { this.layout = layout; }
+    protected void setGridBagConstraints(GridBagConstraints constraints) { this.constraints = constraints; }
+    protected void setAlarm(Alarm alarm) { this.alarm = alarm; }
+    protected void setJAlarmLbl1(JLabel alarmLabel1) { this.alarmLabel1 = alarmLabel1; }
+    protected void setJAlarmLbl2(JLabel alarmLabel2) { this.alarmLabel2 = alarmLabel2; }
+    protected void setJAlarmLbl3(JLabel alarmLabel3) { this.alarmLabel3 = alarmLabel3; }
+    protected void setJAlarmLbl4(JLabel alarmLabel4) { this.alarmLabel4 = alarmLabel4; }
+    protected void setJTextField1(JTextField textField1) { this.textField1 = textField1; }
+    protected void setJTextField2(JTextField textField2) { this.textField2 = textField2; }
+    protected void setJTextField3(JTextField textField3) { this.textField3 = textField3; }
+    protected void setSetAlarmButton(JButton setAlarmButton) { this.setAlarmButton = setAlarmButton; }
+    protected void setJScrollPane(JScrollPane scrollPane) { this.scrollPane = scrollPane; }
+    protected void setJTextArea(final JTextArea textArea) { this.textArea = textArea; }
+    protected void setUpdatingAlarm(boolean updatingAlarm) { this.updatingAlarm = updatingAlarm; }
+    protected void setMusicPlayer(AdvancedPlayer musicPlayer) { this.musicPlayer = musicPlayer; }
+    protected void setActiveAlarm(Alarm activeAlarm) { this.activeAlarm = activeAlarm; }
+    protected void setMondayCheckBox(JCheckBox mondayCheckBox) { this.mondayCheckBox = mondayCheckBox; }
+    protected void setTuesdayCheckBox(JCheckBox tuesdayCheckBox) { this.tuesdayCheckBox = tuesdayCheckBox; }
+    protected void setWednesdayCheckBox(JCheckBox wednesdayCheckBox) { this.wednesdayCheckBox = wednesdayCheckBox; }
+    protected void setThursdayCheckBox(JCheckBox thursdayCheckBox) { this.thursdayCheckBox = thursdayCheckBox; }
+    protected void setFridayCheckBox(JCheckBox fridayCheckBox) { this.fridayCheckBox = fridayCheckBox; }
+    protected void setSaturdayCheckBox(JCheckBox saturdayCheckBox) { this.saturdayCheckBox = saturdayCheckBox; }
+    protected void setSundayCheckBox(JCheckBox sundayCheckBox) { this.sundayCheckBox = sundayCheckBox; }
+    protected void setWeekCheckBox(JCheckBox weekCheckBox) { this.weekCheckBox = weekCheckBox; }
+    protected void setWeekendCheckBox(JCheckBox weekendCheckBox) { this.weekendCheckBox = weekendCheckBox; }
+    protected void setAlarmIsGoingOff(boolean alarmIsGoingOff) { this.alarmIsGoingOff = alarmIsGoingOff; }
+    public void setClock(Clock clock) { this.clock = clock; }
 }
